--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "scripts": {
     "start:backend": "cd odata-proxy-backend && node server.js",
+    "start:frontend": "cd frontend && npm start",
     "install:backend": "cd odata-proxy-backend && npm install",
+    "install:frontend": "cd frontend && npm install",
+    "build:frontend": "cd frontend && npm run build",
     "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "start:frontend": "cd frontend && npm start"
+    "deploy:setup": "npm run install:backend && npm run install:frontend"
   },
   "keywords": [
     "odata",
