feat: (add deployment configuration and environment variables)
- Configure backend for production deployment with PORT environment variable
- Add frontend environment variable support for API URL configuration
- Create .env.local and .env.example files for environment setup
- Add deployment instructions for Render.com (backend) and Vercel/Netlify (frontend)
- Update README with comprehensive deployment and setup documentation
- Add missing npm scripts for complete development and deployment workflow

--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start:backend": "cd odata-proxy-backend && node server.js",
-    "start:frontend": "cd frontend && npm start",
     "install:backend": "cd odata-proxy-backend && npm install",
-    "install:frontend": "cd frontend && npm install",
-    "build:frontend": "cd frontend && npm run build",
     "dev": "concurrently \"npm run start:backend\" \"npm run start:frontend\"",
-    "deploy:setup": "npm run install:backend && npm run install:frontend"
+    "start:frontend": "cd frontend && npm start"
   },
   "keywords": [
     "odata",
